--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
   },
   "dependencies": {
     "@formspree/react": "^2.5.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.446.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/react": "18.3.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
